--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-loader-spinner": "^6.1.6"
@@ -24,7 +23,11 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "i": "^0.3.7",
+    "npm": "^10.8.0",
     "postcss": "^8.4.38",
+    "react": "^18.3.1",
+    "react-router-dom": "^6.23.1",
     "tailwindcss": "^3.4.3",
     "vite": "^5.0.0"
   }
